adiciona links de navegação à lista de ao formulário de cadastro

--- a/public/views/list.html.twig
+++ b/public/views/list.html.twig
@@ -1,6 +1,10 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
+  <header>
+    <h1>Cadastro de sabor</h1>
+    <a href="/new">Adicionar sabor</a>
+  </header>
   <table>
     <thead>
       <th>Sabor</th>
