--- a/public/views/new.html.twig
+++ b/public/views/new.html.twig
@@ -18,5 +18,10 @@
       <label for="disponivel">Disponível?</label>
       <input type="checkbox" name="disponivel" value="1">
     </div>
+
+    <div class="form-actions">
+      <button type="submit">Cadastrar!</button>
+      <a href="/">Voltar para a lista</a>
+    </div>
   </form>
 {% endblock %}
